--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 	<meta property="og:image" content="">
 	<meta name="twitter:card" content="">
 	<meta name="twitter:image" content="">
-
+	<meta name="format-detection" content="telephone=yes">
 	
 
 	<meta name="msapplication-tilecolor" content="#0a0428">
