--- a/tarifs.html
+++ b/tarifs.html
@@ -239,7 +239,8 @@
 
 
 	<script>
-		window.Telegram.WebApp.ready(); window.Telegram.WebApp.expand();
+		window.Telegram.WebApp.ready();
+		window.Telegram.WebApp.expand();
 
 
 		function getKeyboardHeight() {
@@ -251,28 +252,38 @@
 
 		function adjustFormMargin(input) {
 			setTimeout(() => {
-				const inputRect = input.getBoundingClientRect();
-				const formRect = form.getBoundingClientRect();
-				const windowHeight = getKeyboardHeight();
 				const keyboardHeight = window.Telegram.WebApp.keyboardHeight || 0;
 
-				const formBottom = formRect.bottom;
-				const screenBottom = windowHeight - keyboardHeight;
-
-				if (formBottom > screenBottom) {
-					const bottomOffset = formBottom - screenBottom + 10;
-
-					form.style.marginBottom = bottomOffset + "px";
-
-					const inputTop = inputRect.top;
-					const visibleTop = window.pageYOffset || document.documentElement.scrollTop;
-
+				if (keyboardHeight > 0) {
+					form.style.marginBottom = keyboardHeight + "px";
+					scrollToInput(input)
 
 				} else {
 					form.style.marginBottom = "";
-
 				}
 			}, 200);
+		}
+
+		function scrollToInput(input) {
+
+			const inputRect = input.getBoundingClientRect();
+			const windowHeight = getKeyboardHeight();
+			const keyboardHeight = window.Telegram.WebApp.keyboardHeight || 0;
+			const inputBottom = inputRect.bottom;
+			const targetInputBottom = windowHeight - keyboardHeight - 10;
+
+			if (inputBottom > targetInputBottom) {
+				const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+				const scrollOffset = inputRect.bottom - targetInputBottom + scrollTop;
+
+				window.scrollTo({
+					top: scrollOffset,
+					behavior: 'smooth'
+
+				});
+
+			}
+
 		}
 
 		const form = document.getElementById('calculation');
@@ -281,8 +292,6 @@
 			input.addEventListener('focus', () => adjustFormMargin(input));
 			input.addEventListener('blur', () => adjustFormMargin(input));
 		});
-
-
 
 
 	</script>
